<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="SendBtn">Send</string>
    <string name="ReceiveBtn">Receive</string>

    <string name="weatherButton">Go to Weather Forecast</string>
    <string name="TextView_email">Enter your email address:</string>
    <string name="TextView_pass">Enter your password :</string>
    <string name="TextView_profile">Your Profile :</string>
    <string name="TextView_profile_name">Your name :</string>
    <string name="TextView_picture">Your picture :</string>
    <string name="TextView_take_picture">Click above to take your picture :</string>

    <string name="CheckBox">Check this out! </string>
    <string name="Switch">Switch on/off </string>
    <string name="EditText">Type email here </string>
    <string name="chat_editText">Type here </string>
    <string name="EditText_pass"></string>
    <string name="EditText_name">Enter your name</string>
</resources>
